# walrus-workshop

./: .gitignore  .gitmodules  README.md  pyproject.toml
.cursor/commands/: agent.md  write-code.md
configs/: well_config.yaml
experiments/getting_started/: README.md  walrus_example_0_ConvertingDataIntoWellFormat.py  walrus_example_1_RunningWalrus.py  walrus_example_2_RunningWalrusOnBubbleML.py  walrus_example_3_RunningWalrusNonWell.py  walrus_example_4_RunningExample.py
experiments/sparsify/: example.py  example_train.py
experiments/well/: README.md  activations.py  compare_top_features.ipynb  develop.py  enstrophy.py  explore_activations.ipynb  explore_all_activations.ipynb  explore_bingo.ipynb  explore_data.ipynb  explore_enstrophy.ipynb  explore_enstrophy_evolution.ipynb  explore_enstrophy_flux.ipynb  explore_errors.ipynb  explore_exemplars.ipynb  explore_features.ipynb  explore_global_metric.ipynb  explore_linear_probes.ipynb  explore_maes.ipynb  explore_neurons.ipynb  explore_okubo_weiss.ipynb  explore_subgrid_tke.ipynb  figure_cascades.py  figure_energy_spectra.py  figure_enstrophy_feature.py  figure_enstrophy_top_features.py  figure_pi_plateau_feature.py  get_trajectory.py  maes.py  make_well_movies.py  run_rollout.py  script_activations.py  script_bingo.py  script_enstrophy.py  script_enstrophy_flux.py  script_enstrophy_rho.py  script_feature_identification.py  script_generate_features.py  script_linear_probe.py  script_linear_probe_logistic.py  script_linear_probe_regression.py  (+10 more)
notebooks/: walrus_example_0_ConvertingDataIntoWellFormat.py  walrus_example_1_RunningWalrus.py  walrus_example_2_RunningWalrusOnBubbleML.py  walrus_example_3_RunningWalrusNonWell.py  walrus_example_4_RunningExample.py
scripts/: README.md  azure-blobfuse-mount.sh
tests/: test_activations_dataset.py  test_well_dataset.py
(+16 files in other folders)
