[project]
name = "walrus-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "clawpack>=5.13.1",
    "eai-sparsify>=1.3.0",
    "kaleido>=1.2.0",
    "notebook>=7.5.1",
    "plotly>=6.5.0",
]

[project.scripts]
walrus-workshop = "walrus_workshop:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
