[project]
name = "walrus-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "eai-sparsify>=1.3.0",
    "alive-progress>=3.3.0",
    "kaleido>=1.2.0",
    "notebook>=7.5.1",
    "plotly>=6.5.0",
    "wandb>=0.23.1",
]

[project.scripts]
walrus-workshop = "walrus_workshop:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
